tests/ui/macros/std-2024-macros.stderr
error: no rules expected keyword `const`
  --> $DIR/std-2024-macros.rs:9:36
   |
LL |     let _: Vec<Vec<String>> = vec![const { vec![] }];
   |                                    ^^^^^ no rules expected this token in macro call
   |
   = note: while trying to match end of macro

error: no rules expected keyword `const`
  --> $DIR/std-2024-macros.rs:11:36
   |
LL |     let _: Vec<Vec<String>> = vec![const { vec![] }; 10];
   |                                    ^^^^^ no rules expected this token in macro call
   |
   = note: while trying to match end of macro

error: aborting due to 2 previous errors

